verifica la correcta traduccion en archivos de idioma

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,151 +1,164 @@
-
 {
-  "Administrator Dashboard": "Administrator Dashboard",
-  "Manage your restaurant's operations.": "Manage your restaurant's operations.",
-  "Modules": "Modules",
-  "Orders": "Orders",
-  "Menu y recetas": "Menu & Recipes",
-  "Staff": "Staff",
-  "Inventory": "Inventory",
-  "Kitchen": "Kitchen",
-  "Deliveries": "Deliveries",
-  "Reports": "Reports",
-  "Digital Map": "Digital Map",
-  "Table Management": "Table Management",
-  "Visualize your restaurant layout, manage tables, and track assignments in real-time.": "Visualize your restaurant layout, manage tables, and track assignments in real-time.",
-  "Features": "Features",
-  "Key features of the table management module.": "Key features of the table management module.",
-  "Map and room setup": "Map and room setup",
-  "Waiter assignment on sales": "Waiter assignment on sales",
-  "Transfer of consumptions between tables": "Transfer of consumptions between tables",
-  "Sales heat map of tables": "Sales heat map of tables",
-  "Available soon": "Available soon",
-  "Loading...": "Loading...",
-  "Employee Management": "Employee Management",
-  "Manage roles, permissions, and PINs for your staff.": "Manage roles, permissions, and PINs for your staff.",
-  "Add Employee": "Add Employee",
-  "No employees found. Add your first employee to get started.": "No employees found. Add your first employee to get started.",
-  "Active": "Active",
-  "Inactive": "Inactive",
-  "Actions": "Actions",
-  "Edit": "Edit",
-  "Permissions": "Permissions",
-  "Deactivate": "Deactivate",
-  "Are you sure?": "Are you sure?",
-  "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?",
-  "Cancel": "Cancel",
-  "Yes, deactivate": "Yes, deactivate",
-  "Edit Employee": "Edit Employee",
-  "Add New Employee": "Add New Employee",
-  "Modify the employee information.": "Modify the employee information.",
-  "Add a new employee to your team.": "Add a new employee to your team.",
-  "Module Permissions": "Module Permissions",
-  "Select the modules this employee can access.": "Select the modules this employee can access.",
-  "Administrator": "Administrator",
-  "Employee": "Employee",
-  "Unknown": "Unknown",
-  "Error": "Error",
-  "Could not load employees.": "Could not load employees.",
-  "Employee Deactivated": "Employee Deactivated",
-  "The employee has been marked as inactive.": "The employee has been marked as inactive.",
-  "Could not deactivate the employee.": "Could not deactivate the employee.",
-  "Save Permissions": "Save Permissions",
-  "Update Error": "Update Error",
-  "Could not save the permissions.": "Could not save the permissions.",
-  "Permissions Updated": "Permissions Updated",
-  "The employee's module access has been updated.": "The employee's module access has been updated.",
-  "Dashboard": "Dashboard",
-  "First Name(s)": "First Name(s)",
-  "e.g., Ana": "e.g., Anne",
-  "Last Names": "Last Names",
-  "e.g., Silva": "e.g., Smith",
-  "Phone": "Phone",
-  "Phone (will be the password)": "Phone (will be the password)",
-  "Minimum 6 digits": "Minimum 6 digits",
-  "Email": "Email",
-  "e.g., user@email.com": "e.g., user@email.com",
-  "Profile": "Profile",
-  "Select a profile": "Select a profile",
-  "Save Changes": "Save Changes",
-  "Register Employee": "Register Employee",
-  "User Updated": "User Updated",
-  "The employee '{{fullName}}' has been updated.": "The employee '{{fullName}}' has been updated.",
-  "Employee Registered": "Employee Registered",
-  "The employee '{{fullName}}' has been successfully registered.": "The employee '{{fullName}}' has been successfully registered.",
-  "An error occurred while {{action}} the employee.": "An error occurred while {{action}} the employee.",
-  "updating": "updating",
-  "registering": "registering",
-  "This email is already in use by another user.": "This email is already in use by another user.",
-  "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
-  "The email format is invalid.": "The email format is invalid.",
-  "Master Admin Dashboard": "Master Admin Dashboard",
-  "Welcome to the Tlacualli main control panel.": "Welcome to the Tlacualli main control panel.",
-  "Registered Restaurants": "Registered Restaurants",
-  "Master Admin Users": "Master Admin Users",
-  "Administrator Users": "Administrator Users",
-  "Collaborator Users": "Collaborator Users",
-  "Monthly Accesses": "Monthly Accesses",
-  "Accesses": "Accesses",
-  "No access data to display.": "No access data to display.",
-  "Actions by Restaurant": "Actions by Restaurant",
-  "No action data to display.": "No action data to display.",
-  "Restaurants": "Restaurants",
-  "Register Restaurant": "Register Restaurant",
-  "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
-  "Go Back": "Go Back",
-  "Restaurant Information": "Restaurant Information",
-  "Client Dashboard": "Client Dashboard",
-  "Your personal space.": "Your personal space.",
-  "Welcome!": "Welcome!",
-  "View your order history, manage your payment methods, and update your profile.": "View your order history, manage your payment methods, and update your profile.",
-  "View My Orders": "View My Orders",
-  "Collaborator Dashboard": "Collaborator Dashboard",
-  "Access your daily tasks and information.": "Access your daily tasks and information.",
-  "Welcome, Collaborator!": "Welcome, Collaborator!",
-  "View your assigned orders, tables, and other tasks for the day.": "View your assigned orders, tables, and other tasks for the day.",
-  "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
-  "Login Successful": "Login Successful",
-  "Welcome back, {{name}}!": "Welcome back, {{name}}!",
-  "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
-  "Login Failed": "Login Failed",
-  "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
-  "The email or password are incorrect.": "The email or password are incorrect.",
-  "Email required": "Email required",
-  "Please enter your email to reset your password.": "Please enter your email to reset your password.",
-  "Recovery email sent": "Recovery email sent",
-  "Check your inbox to reset your password.": "Check your inbox to reset your password.",
-  "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
-  "No user found with that email address.": "No user found with that email address.",
-  "User (email)": "User (email)",
-  "Password": "Password",
-  "Show password": "Show password",
-  "Hide password": "Hide password",
-  "Remember me": "Remember me",
-  "Forgot your password?": "Forgot your password?",
-  "LOG IN": "LOG IN",
-  "Inventory Management": "Inventory Management",
-  "Manage your stock, suppliers, and movements.": "Manage your stock, suppliers, and movements.",
-  "Inventory Value": "Inventory Value",
-  "Estimated value of current stock": "Estimated value of current stock",
-  "Low Stock Items": "Low Stock Items",
-  "Items below minimum stock level": "Items below minimum stock level",
-  "Items": "Items",
-  "Suppliers": "Suppliers",
-  "Movements": "Movements",
-  "Menu & Recipes": "Menu & Recipes",
-  "Manage your recipes and menu items.": "Manage your recipes and menu items.",
-  "Create Recipe": "Create Recipe",
-  "Add a new technical sheet for a dish.": "Add a new technical sheet for a dish.",
-  "Create": "Create",
-  "Create New Recipe": "Create New Recipe",
-  "Define the ingredients and cost for a new dish.": "Define the ingredients and cost for a new dish.",
-  "Create Menu Item": "Create Menu Item",
-  "Add a new dish to your public menu.": "Add a new dish to your public menu.",
-  "Add a new dish to your menu, linking it to a recipe.": "Add a new dish to your menu, linking it to a recipe.",
-  "Existing Recipes": "Existing Recipes",
-  "View and manage your current recipes.": "View and manage your current recipes.",
-  "Menu Items": "Menu Items",
-  "View and manage your current menu dishes.": "View and manage your current menu dishes."
+    "Administrator Dashboard": "Administrator Dashboard",
+    "Manage your restaurant's operations.": "Manage your restaurant's operations.",
+    "Modules": "Modules",
+    "Orders": "Orders",
+    "Menu y recetas": "Menu & Recipes",
+    "Staff": "Staff",
+    "Inventory": "Inventory",
+    "Kitchen": "Kitchen",
+    "Deliveries": "Deliveries",
+    "Reports": "Reports",
+    "Digital Map": "Digital Map",
+    "My Account": "My Account",
+    "Theme": "Theme",
+    "Light": "Light",
+    "Dark": "Dark",
+    "System": "System",
+    "Language": "Language",
+    "Change Password": "Change Password",
+    "Log out": "Log out",
+    "Toggle navigation menu": "Toggle navigation menu",
+    "Menu": "Menu",
+    "Enter your new password below. After saving, you will be logged out for security.": "Enter your new password below. After saving, you will be logged out for security.",
+    "New Password": "New Password",
+    "Confirm Password": "Confirm Password",
+    "Cancel": "Cancel",
+    "Save Changes": "Save Changes",
+    "Error": "Error",
+    "Passwords do not match.": "Passwords do not match.",
+    "Password must be at least 6 characters long.": "Password must be at least 6 characters long.",
+    "Success": "Success",
+    "Password updated successfully.": "Password updated successfully.",
+    "Error updating password": "Error updating password",
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.",
+    "User (email)": "User (email)",
+    "Password": "Password",
+    "Show password": "Show password",
+    "Hide password": "Hide password",
+    "Remember me": "Remember me",
+    "Forgot your password?": "Forgot your password?",
+    "LOG IN": "LOG IN",
+    "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
+    "Login Successful": "Login Successful",
+    "Welcome back, {{name}}!": "Welcome back, {{name}}!",
+    "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
+    "Login Failed": "Login Failed",
+    "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
+    "Email required": "Email required",
+    "Please enter your email to reset your password.": "Please enter your email to reset your password.",
+    "Recovery email sent": "Recovery email sent",
+    "Check your inbox to reset your password.": "Check your inbox to reset your password.",
+    "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
+    "No user found with that email address.": "No user found with that email address.",
+    "The email or password are incorrect.": "The email or password are incorrect.",
+    "Employee Management": "Employee Management",
+    "Manage roles, permissions, and PINs for your staff.": "Manage roles, permissions, and PINs for your staff.",
+    "Add Employee": "Add Employee",
+    "Could not load employees.": "Could not load employees.",
+    "Edit Employee": "Edit Employee",
+    "Add New Employee": "Add New Employee",
+    "Modify the employee information.": "Modify the employee information.",
+    "Add a new employee to your team.": "Add a new employee to your team.",
+    "Module Permissions": "Module Permissions",
+    "Select the modules this employee can access.": "Select the modules this employee can access.",
+    "Active": "Active",
+    "Inactive": "Inactive",
+    "Actions": "Actions",
+    "Edit": "Edit",
+    "Permissions": "Permissions",
+    "Deactivate": "Deactivate",
+    "Are you sure?": "Are you sure?",
+    "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?": "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?",
+    "Yes, deactivate": "Yes, deactivate",
+    "No employees found. Add your first employee to get started.": "No employees found. Add your first employee to get started.",
+    "Administrator": "Administrator",
+    "Employee": "Employee",
+    "Unknown": "Unknown",
+    "Loading...": "Loading...",
+    "Employee Deactivated": "Employee Deactivated",
+    "The employee has been marked as inactive.": "The employee has been marked as inactive.",
+    "Could not deactivate the employee.": "Could not deactivate the employee.",
+    "First Name(s)": "First Name(s)",
+    "e.g., Ana": "e.g., Ana",
+    "Last Names": "Last Names",
+    "e.g., Silva": "e.g., Silva",
+    "Phone (will be the password)": "Phone (will be the password)",
+    "Minimum 6 digits": "Minimum 6 digits",
+    "Email": "Email",
+    "e.g., user@email.com": "e.g., user@email.com",
+    "Profile": "Profile",
+    "Select a profile": "Select a profile",
+    "Register Employee": "Register Employee",
+    "User Updated": "User Updated",
+    "The employee '{{fullName}}' has been updated.": "The employee '{{fullName}}' has been updated.",
+    "Employee Registered": "Employee Registered",
+    "The employee '{{fullName}}' has been successfully registered.": "The employee '{{fullName}}' has been successfully registered.",
+    "An error occurred while {{action}} the employee.": "An error occurred while {{action}} the employee.",
+    "updating": "updating",
+    "registering": "registering",
+    "This email is already in use by another user.": "This email is already in use by another user.",
+    "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
+    "The email format is invalid.": "The email format is invalid.",
+    "Phone": "Phone",
+    "Dashboard": "Dashboard",
+    "Permissions Updated": "Permissions Updated",
+    "The employee's module access has been updated.": "The employee's module access has been updated.",
+    "Update Error": "Update Error",
+    "Could not save the permissions.": "Could not save the permissions.",
+    "Save Permissions": "Save Permissions",
+    "Restaurant information is not available yet. Please try again.": "Restaurant information is not available yet. Please try again.",
+    "Activate": "Activate",
+    "Delete Permanently": "Delete Permanently",
+    "Employee Activated": "Employee Activated",
+    "The employee has been marked as active.": "The employee has been marked as active.",
+    "Could not activate the employee.": "Could not activate the employee.",
+    "Permanent Deletion": "Permanent Deletion",
+    "This action is irreversible. The user will be deleted from the authentication system and database. Are you absolutely sure?": "This action is irreversible. The user will be deleted from the authentication system and database. Are you absolutely sure?",
+    "Yes, delete permanently": "Yes, delete permanently",
+    "Employee Deleted": "Employee Deleted",
+    "The employee has been permanently removed from the database.": "The employee has been permanently removed from the database.",
+    "Could not permanently delete the employee. Please contact support if the problem persists.": "Could not permanently delete the employee. Please contact support if the problem persists.",
+    "Table and Assignment Management": "Table and Assignment Management",
+    "Visualize your restaurant layout, manage tables, and track assignments in real-time.": "Visualize your restaurant layout, manage tables, and track assignments in real-time.",
+    "Assign Areas & Tables": "Assign Areas & Tables",
+    "Assign employees to specific areas and tables.": "Assign employees to specific areas and tables.",
+    "Select an employee": "Select an employee",
+    "Tables": "Tables",
+    "Assign all": "Assign all",
+    "Remove all": "Remove all",
+    "Table": "Table",
+    "No tables in this area.": "No tables in this area.",
+    "Assignment Updated": "Assignment Updated",
+    "The assignment has been saved successfully.": "The assignment has been saved successfully.",
+    "Could not save the assignment.": "Could not save the assignment.",
+    "Assignments Updated": "Assignments Updated",
+    "Table deleted": "Table deleted",
+    "The table has been removed from the map.": "The table has been removed from the map.",
+    "Edit Table": "Edit Table",
+    "Modify the name and number of seats for the table.": "Modify the name and number of seats for the table.",
+    "Table updated": "Table updated",
+    "Create a room to start adding tables.": "Create a room to start adding tables.",
+    "Table Name": "Table Name",
+    "Number of Seats": "Number of Seats",
+    "This action cannot be undone. This will permanently delete the table from the room plan.": "This action cannot be undone. This will permanently delete the table from the room plan.",
+    "Delete": "Delete",
+    "Select a room": "Select a room",
+    "You must select a room to add a table.": "You must select a room to add a table.",
+    "Square Table": "Square Table",
+    "Circle Table": "Circle Table",
+    "Delete Room": "Delete Room",
+    "Add Room": "Add Room",
+    "Add New Room": "Add New Room",
+    "Create a new area or room to organize your tables.": "Create a new area or room to organize your tables.",
+    "Room name (e.g., Terrace)": "Room name (e.g., Terrace)",
+    "Save": "Save",
+    "Room added": "Room added",
+    "The room \"{{name}}\" has been created.": "The room \"{{name}}\" has been created.",
+    "Action not allowed": "Action not allowed",
+    "You cannot delete the only existing room.": "You cannot delete the only existing room.",
+    "Room deleted": "Room deleted",
+    "The room \"{{name}}\" has been deleted.": "The room \"{{name}}\" has been deleted."
 }
 
     
