--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,151 +1,164 @@
-
 {
-  "Administrator Dashboard": "Dashboard de Administrador",
-  "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
-  "Modules": "Módulos",
-  "Orders": "Pedidos",
-  "Menu y recetas": "Menú y recetas",
-  "Staff": "Personal",
-  "Inventory": "Inventario",
-  "Kitchen": "Cocina",
-  "Deliveries": "Repartos",
-  "Reports": "Reportes",
-  "Digital Map": "Mapa Digital",
-  "Table Management": "Gestión de Mesas",
-  "Visualize your restaurant layout, manage tables, and track assignments in real-time.": "Visualiza la distribución de tu restaurante, gestiona mesas y sigue las asignaciones en tiempo real.",
-  "Features": "Características",
-  "Key features of the table management module.": "Funcionalidades clave del módulo de gestión de mesas.",
-  "Map and room setup": "Configuración de mapa y salones",
-  "Waiter assignment on sales": "Asignación de mesero en la venta",
-  "Transfer of consumptions between tables": "Transferencia de consumos entre mesas",
-  "Sales heat map of tables": "Mapa de calor de ventas de las mesas",
-  "Available soon": "Disponible próximamente",
-  "Loading...": "Cargando...",
-  "Employee Management": "Gestión de Empleados",
-  "Manage roles, permissions, and PINs for your staff.": "Administra roles, permisos y PINs de tu personal.",
-  "Add Employee": "Agregar Empleado",
-  "No employees found. Add your first employee to get started.": "No se encontraron empleados. Agrega tu primer empleado para comenzar.",
-  "Active": "Activo",
-  "Inactive": "Inactivo",
-  "Actions": "Acciones",
-  "Edit": "Editar",
-  "Permissions": "Permisos",
-  "Deactivate": "Desactivar",
-  "Are you sure?": "¿Estás seguro?",
-  "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
-  "Cancel": "Cancelar",
-  "Yes, deactivate": "Sí, desactivar",
-  "Edit Employee": "Editar Empleado",
-  "Add New Employee": "Agregar Nuevo Empleado",
-  "Modify the employee information.": "Modifica la información del empleado.",
-  "Add a new employee to your team.": "Agrega un nuevo empleado a tu equipo.",
-  "Module Permissions": "Permisos de Módulos",
-  "Select the modules this employee can access.": "Selecciona los módulos a los que este empleado puede acceder.",
-  "Administrator": "Administrador",
-  "Employee": "Empleado",
-  "Unknown": "Desconocido",
-  "Error": "Error",
-  "Could not load employees.": "No se pudieron cargar los empleados.",
-  "Employee Deactivated": "Empleado Desactivado",
-  "The employee has been marked as inactive.": "El empleado ha sido marcado como inactivo.",
-  "Could not deactivate the employee.": "No se pudo desactivar el empleado.",
-  "Save Permissions": "Guardar Permisos",
-  "Update Error": "Error de Actualización",
-  "Could not save the permissions.": "No se pudieron guardar los permisos.",
-  "Permissions Updated": "Permisos Actualizados",
-  "The employee's module access has been updated.": "El acceso a los módulos del empleado ha sido actualizado.",
-  "Dashboard": "Dashboard",
-  "First Name(s)": "Nombre(s)",
-  "e.g., Ana": "Ej. Ana",
-  "Last Names": "Apellidos",
-  "e.g., Silva": "Ej. Silva",
-  "Phone": "Teléfono",
-  "Phone (will be the password)": "Teléfono (será la contraseña)",
-  "Minimum 6 digits": "Mínimo 6 dígitos",
-  "Email": "Correo electrónico",
-  "e.g., user@email.com": "Ej. usuario@email.com",
-  "Profile": "Perfil",
-  "Select a profile": "Selecciona un perfil",
-  "Save Changes": "Guardar Cambios",
-  "Register Employee": "Registrar Empleado",
-  "User Updated": "Usuario Actualizado",
-  "The employee '{{fullName}}' has been updated.": "El empleado '{{fullName}}' ha sido actualizado.",
-  "Employee Registered": "Empleado Registrado",
-  "The employee '{{fullName}}' has been successfully registered.": "El empleado '{{fullName}}' ha sido registrado exitosamente.",
-  "An error occurred while {{action}} the employee.": "Ocurrió un error al {{action}} el empleado.",
-  "updating": "actualizar",
-  "registering": "registrar",
-  "This email is already in use by another user.": "Este correo ya está en uso por otro usuario.",
-  "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
-  "The email format is invalid.": "El formato del correo es inválido.",
-  "Master Admin Dashboard": "Dashboard de Administrador Maestro",
-  "Welcome to the Tlacualli main control panel.": "Bienvenido al panel de control principal de Tlacualli.",
-  "Registered Restaurants": "Restaurantes Registrados",
-  "Master Admin Users": "Usuarios Admin Maestro",
-  "Administrator Users": "Usuarios Administradores",
-  "Collaborator Users": "Usuarios Colaboradores",
-  "Monthly Accesses": "Accesos Mensuales",
-  "Accesses": "Accesos",
-  "No access data to display.": "No hay datos de acceso para mostrar.",
-  "Actions by Restaurant": "Acciones por Restaurante",
-  "No action data to display.": "No hay datos de acciones para mostrar.",
-  "Restaurants": "Restaurantes",
-  "Register Restaurant": "Registrar Restaurante",
-  "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
-  "Go Back": "Regresar",
-  "Restaurant Information": "Información del Restaurante",
-  "Client Dashboard": "Dashboard de Cliente",
-  "Your personal space.": "Tu espacio personal.",
-  "Welcome!": "¡Bienvenido!",
-  "View your order history, manage your payment methods, and update your profile.": "Consulta tu historial de pedidos, gestiona tus métodos de pago y actualiza tu perfil.",
-  "View My Orders": "Ver Mis Pedidos",
-  "Collaborator Dashboard": "Dashboard de Colaborador",
-  "Access your daily tasks and information.": "Accede a tus tareas e información diaria.",
-  "Welcome, Collaborator!": "¡Bienvenido, Colaborador!",
-  "View your assigned orders, tables, and other tasks for the day.": "Consulta tus pedidos asignados, mesas y otras tareas del día.",
-  "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
-  "Login Successful": "Inicio de Sesión Exitoso",
-  "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
-  "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado inválido.",
-  "Login Failed": "Falló el Inicio de Sesión",
-  "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
-  "The email or password are incorrect.": "El correo electrónico o la contraseña son incorrectos.",
-  "Email required": "Correo requerido",
-  "Please enter your email to reset your password.": "Por favor, ingresa tu correo para restablecer tu contraseña.",
-  "Recovery email sent": "Correo de recuperación enviado",
-  "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
-  "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
-  "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo.",
-  "User (email)": "Usuario (email)",
-  "Password": "Contraseña",
-  "Show password": "Mostrar contraseña",
-  "Hide password": "Ocultar contraseña",
-  "Remember me": "Recordarme",
-  "Forgot your password?": "¿Olvidaste tu contraseña?",
-  "LOG IN": "INICIAR SESIÓN",
-  "Inventory Management": "Gestión de Inventario",
-  "Manage your stock, suppliers, and movements.": "Administra tu stock, proveedores y movimientos.",
-  "Inventory Value": "Valor del Inventario",
-  "Estimated value of current stock": "Valor estimado del stock actual",
-  "Low Stock Items": "Items con Bajo Stock",
-  "Items below minimum stock level": "Items por debajo del nivel mínimo de stock",
-  "Items": "Artículos",
-  "Suppliers": "Proveedores",
-  "Movements": "Movimientos",
-  "Menu & Recipes": "Menú y Recetas",
-  "Manage your recipes and menu items.": "Gestiona tus recetas y los elementos de tu menú.",
-  "Create Recipe": "Crear Receta",
-  "Add a new technical sheet for a dish.": "Añade una nueva ficha técnica para un platillo.",
-  "Create": "Crear",
-  "Create New Recipe": "Crear Nueva Receta",
-  "Define the ingredients and cost for a new dish.": "Define los ingredientes y el costo para un nuevo platillo.",
-  "Create Menu Item": "Crear Elemento de Menú",
-  "Add a new dish to your public menu.": "Añade un nuevo platillo a tu menú público.",
-  "Add a new dish to your menu, linking it to a recipe.": "Añade un nuevo platillo a tu menú, enlazándolo a una receta.",
-  "Existing Recipes": "Recetas Existentes",
-  "View and manage your current recipes.": "Ve y gestiona tus recetas actuales.",
-  "Menu Items": "Elementos del Menú",
-  "View and manage your current menu dishes.": "Ve y gestiona los platillos de tu menú actual."
+    "Administrator Dashboard": "Dashboard de Administrador",
+    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
+    "Modules": "Módulos",
+    "Orders": "Pedidos",
+    "Menu y recetas": "Menú y recetas",
+    "Staff": "Personal",
+    "Inventory": "Inventario",
+    "Kitchen": "Cocina",
+    "Deliveries": "Repartos",
+    "Reports": "Reportes",
+    "Digital Map": "Mapa Digital",
+    "My Account": "Mi Cuenta",
+    "Theme": "Tema",
+    "Light": "Claro",
+    "Dark": "Oscuro",
+    "System": "Sistema",
+    "Language": "Idioma",
+    "Change Password": "Cambiar Contraseña",
+    "Log out": "Cerrar sesión",
+    "Toggle navigation menu": "Alternar menú de navegación",
+    "Menu": "Menú",
+    "Enter your new password below. After saving, you will be logged out for security.": "Ingresa tu nueva contraseña a continuación. Después de guardar, se cerrará tu sesión por seguridad.",
+    "New Password": "Nueva Contraseña",
+    "Confirm Password": "Confirmar Contraseña",
+    "Cancel": "Cancelar",
+    "Save Changes": "Guardar Cambios",
+    "Error": "Error",
+    "Passwords do not match.": "Las contraseñas no coinciden.",
+    "Password must be at least 6 characters long.": "La contraseña debe tener al menos 6 caracteres.",
+    "Success": "Éxito",
+    "Password updated successfully.": "Contraseña actualizada correctamente.",
+    "Error updating password": "Error al actualizar la contraseña",
+    "This operation is sensitive and requires recent authentication. Please log out and log back in to change your password.": "Esta operación es sensible y requiere autenticación reciente. Por favor, cierra sesión y vuelve a iniciarla para cambiar tu contraseña.",
+    "User (email)": "Usuario (email)",
+    "Password": "Contraseña",
+    "Show password": "Mostrar contraseña",
+    "Hide password": "Ocultar contraseña",
+    "Remember me": "Recordarme",
+    "Forgot your password?": "¿Olvidaste tu contraseña?",
+    "LOG IN": "INICIAR SESIÓN",
+    "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
+    "Login Successful": "Inicio de Sesión Exitoso",
+    "Welcome back, {{name}}!": "¡Bienvenido de nuevo, {{name}}!",
+    "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estado no válido.",
+    "Login Failed": "Falló el Inicio de Sesión",
+    "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
+    "Email required": "Email requerido",
+    "Please enter your email to reset your password.": "Por favor, ingresa tu email para restablecer tu contraseña.",
+    "Recovery email sent": "Email de recuperación enviado",
+    "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
+    "Could not send recovery email. Please try again.": "No se pudo enviar el email de recuperación. Por favor, inténtalo de nuevo.",
+    "No user found with that email address.": "No se encontró ningún usuario con esa dirección de email.",
+    "The email or password are incorrect.": "El correo electrónico o la contraseña son incorrectos.",
+    "Employee Management": "Gestión de Empleados",
+    "Manage roles, permissions, and PINs for your staff.": "Administra roles, permisos y PINs para tu personal.",
+    "Add Employee": "Agregar Empleado",
+    "Could not load employees.": "No se pudieron cargar los empleados.",
+    "Edit Employee": "Editar Empleado",
+    "Add New Employee": "Agregar Nuevo Empleado",
+    "Modify the employee information.": "Modifica la información del empleado.",
+    "Add a new employee to your team.": "Agrega un nuevo empleado a tu equipo.",
+    "Module Permissions": "Permisos de Módulo",
+    "Select the modules this employee can access.": "Selecciona los módulos a los que este empleado puede acceder.",
+    "Active": "Activo",
+    "Inactive": "Inactivo",
+    "Actions": "Acciones",
+    "Edit": "Editar",
+    "Permissions": "Permisos",
+    "Deactivate": "Desactivar",
+    "Are you sure?": "¿Estás seguro?",
+    "This action will mark the user as inactive and they won't be able to access the system. Do you want to continue?": "Esta acción marcará al usuario como inactivo y no podrá acceder al sistema. ¿Deseas continuar?",
+    "Yes, deactivate": "Sí, desactivar",
+    "No employees found. Add your first employee to get started.": "No se encontraron empleados. Agrega tu primer empleado para comenzar.",
+    "Administrator": "Administrador",
+    "Employee": "Empleado",
+    "Unknown": "Desconocido",
+    "Loading...": "Cargando...",
+    "Employee Deactivated": "Empleado Desactivado",
+    "The employee has been marked as inactive.": "El empleado ha sido marcado como inactivo.",
+    "Could not deactivate the employee.": "No se pudo desactivar el empleado.",
+    "First Name(s)": "Nombre(s)",
+    "e.g., Ana": "p.ej., Ana",
+    "Last Names": "Apellidos",
+    "e.g., Silva": "p.ej., Silva",
+    "Phone (will be the password)": "Teléfono (será la contraseña)",
+    "Minimum 6 digits": "Mínimo 6 dígitos",
+    "Email": "Correo electrónico",
+    "e.g., user@email.com": "p.ej., usuario@email.com",
+    "Profile": "Perfil",
+    "Select a profile": "Selecciona un perfil",
+    "Register Employee": "Registrar Empleado",
+    "User Updated": "Usuario Actualizado",
+    "The employee '{{fullName}}' has been updated.": "El empleado '{{fullName}}' ha sido actualizado.",
+    "Employee Registered": "Empleado Registrado",
+    "The employee '{{fullName}}' has been successfully registered.": "El empleado '{{fullName}}' ha sido registrado exitosamente.",
+    "An error occurred while {{action}} the employee.": "Ocurrió un error al {{action}} el empleado.",
+    "updating": "actualizar",
+    "registering": "registrar",
+    "This email is already in use by another user.": "Este correo electrónico ya está en uso por otro usuario.",
+    "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
+    "The email format is invalid.": "El formato del correo electrónico es inválido.",
+    "Phone": "Teléfono",
+    "Dashboard": "Dashboard",
+    "Permissions Updated": "Permisos Actualizados",
+    "The employee's module access has been updated.": "El acceso del empleado a los módulos ha sido actualizado.",
+    "Update Error": "Error de Actualización",
+    "Could not save the permissions.": "No se pudieron guardar los permisos.",
+    "Save Permissions": "Guardar Permisos",
+    "Restaurant information is not available yet. Please try again.": "La información del restaurante aún no está disponible. Por favor, inténtalo de nuevo.",
+    "Activate": "Activar",
+    "Delete Permanently": "Eliminar Permanentemente",
+    "Employee Activated": "Empleado Activado",
+    "The employee has been marked as active.": "El empleado ha sido marcado como activo.",
+    "Could not activate the employee.": "No se pudo activar el empleado.",
+    "Permanent Deletion": "Eliminación Permanente",
+    "This action is irreversible. The user will be deleted from the authentication system and database. Are you absolutely sure?": "Esta acción es irreversible. El usuario será eliminado del sistema de autenticación y de la base de datos. ¿Estás absolutamente seguro?",
+    "Yes, delete permanently": "Sí, eliminar permanentemente",
+    "Employee Deleted": "Empleado Eliminado",
+    "The employee has been permanently removed from the database.": "El empleado ha sido eliminado permanentemente de la base de datos.",
+    "Could not permanently delete the employee. Please contact support if the problem persists.": "No se pudo eliminar permanentemente al empleado. Contacta a soporte si el problema persiste.",
+    "Table and Assignment Management": "Gestión de Mesas y Asignaciones",
+    "Visualize your restaurant layout, manage tables, and track assignments in real-time.": "Visualiza el diseño de tu restaurante, gestiona mesas y sigue las asignaciones en tiempo real.",
+    "Assign Areas & Tables": "Asignar Áreas y Mesas",
+    "Assign employees to specific areas and tables.": "Asigna empleados a áreas y mesas específicas.",
+    "Select an employee": "Selecciona un empleado",
+    "Tables": "Mesas",
+    "Assign all": "Asignar todo",
+    "Remove all": "Quitar todo",
+    "Table": "Mesa",
+    "No tables in this area.": "No hay mesas en esta área.",
+    "Assignment Updated": "Asignación Actualizada",
+    "The assignment has been saved successfully.": "La asignación ha sido guardada exitosamente.",
+    "Could not save the assignment.": "No se pudo guardar la asignación.",
+    "Assignments Updated": "Asignaciones Actualizadas",
+    "Table deleted": "Mesa eliminada",
+    "The table has been removed from the map.": "La mesa ha sido eliminada del plano.",
+    "Edit Table": "Editar Mesa",
+    "Modify the name and number of seats for the table.": "Modifica el nombre y número de asientos de la mesa.",
+    "Table updated": "Mesa actualizada",
+    "Create a room to start adding tables.": "Crea un salón para empezar a añadir mesas.",
+    "Table Name": "Nombre de la Mesa",
+    "Number of Seats": "Número de Asientos",
+    "This action cannot be undone. This will permanently delete the table from the room plan.": "Esta acción no se puede deshacer. Esto eliminará permanentemente la mesa del plano del salón.",
+    "Delete": "Eliminar",
+    "Select a room": "Selecciona un salón",
+    "You must select a room to add a table.": "Debes seleccionar un salón para añadir una mesa.",
+    "Square Table": "Mesa Cuadrada",
+    "Circle Table": "Mesa Redonda",
+    "Delete Room": "Eliminar Salón",
+    "Add Room": "Añadir Salón",
+    "Add New Room": "Añadir Nuevo Salón",
+    "Create a new area or room to organize your tables.": "Crea una nueva área o salón para organizar tus mesas.",
+    "Room name (e.g., Terrace)": "Nombre del salón (p.ej., Terraza)",
+    "Save": "Guardar",
+    "Room added": "Salón añadido",
+    "The room \"{{name}}\" has been created.": "El salón \"{{name}}\" ha sido creado.",
+    "Action not allowed": "Acción no permitida",
+    "You cannot delete the only existing room.": "No puedes eliminar el único salón existente.",
+    "Room deleted": "Salón eliminado",
+    "The room \"{{name}}\" has been deleted.": "El salón \"{{name}}\" ha sido eliminado."
 }
 
     
