en /orders verifica que todos los textos tengan su traduccion en los arc

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,72 +1,124 @@
 
 {
-    "Administrator Dashboard": "Administrator Dashboard",
-    "Manage your restaurant's operations.": "Manage your restaurant's operations.",
-    "Modules": "Modules",
-    "Orders": "Orders",
-    "Menu & Recipes": "Menu & Recipes",
-    "Staff": "Staff",
-    "Inventory": "Inventory",
-    "Kitchen": "Kitchen",
-    "Deliveries": "Deliveries",
-    "Reports": "Reports",
-    "Digital Map": "Digital Map",
-    "Go Back": "Go Back",
-    "Create": "Create",
-    "Register Restaurant": "Register Restaurant",
-    "Add a new restaurant and its administrator to the system.": "Add a new restaurant and its administrator to the system.",
-    "Restaurant Information": "Restaurant Information",
-    "Restaurant Name": "Restaurant Name",
-    "e.g., Tacos El Sol": "e.g., Tacos El Sol",
-    "Social Reason": "Social Reason",
-    "e.g., Tacos El Sol S.A. de C.V.": "e.g., Tacos El Sol S.A. de C.V.",
-    "Style": "Style",
-    "Select a style": "Select a style",
-    "Italiano": "Italian",
-    "Mar y tierra": "Surf and Turf",
-    "Carnes": "Steakhouse",
-    "Mariscos": "Seafood",
-    "Mexicano": "Mexican",
-    "Japonés": "Japanese",
-    "Otro": "Other",
-    "Address": "Address",
-    "e.g., Main St 123, Downtown": "e.g., Main St 123, Downtown",
-    "Municipality or City": "Municipality or City",
-    "e.g., Cuauhtémoc": "e.g., Cuauhtémoc",
-    "State": "State",
-    "Select a state": "Select a state",
-    "Contact Information (Administrator)": "Contact Information (Administrator)",
-    "Phone (will be the password)": "Phone (will be the password)",
-    "Minimum 6 digits": "Minimum 6 digits",
-    "Email (will be the username)": "Email (will be the username)",
-    "e.g., admin@tacoselsol.com": "e.g., admin@tacoselsol.com",
-    "RFC": "RFC",
-    "e.g., SOLT850101XXX": "e.g., SOLT850101XXX",
-    "Registering...": "Registering...",
-    "Registration Successful": "Registration Successful",
-    "The restaurant '{{name}}' and its administrator user have been registered.": "The restaurant '{{name}}' and its administrator user have been registered.",
-    "Operation Error": "Operation Error",
-    "The email is already in use by another administrator.": "The email is already in use by another administrator.",
-    "The password (phone) must be at least 6 characters long.": "The password (phone) must be at least 6 characters long.",
-    "The email format is invalid.": "The email format is invalid.",
-    "An error occurred during the operation.": "An error occurred during the operation.",
-    "User (email)": "User (email)",
-    "Password": "Password",
-    "Remember me": "Remember me",
-    "Forgot your password?": "Forgot your password?",
-    "LOG IN": "LOG IN",
-    "Login Successful": "Login Successful",
-    "Welcome back, {{name}}!": "Welcome back, {{name}}!",
-    "The user is not active or does not have permissions.": "The user is not active or does not have permissions.",
-    "Unrecognized user profile or invalid status.": "Unrecognized user profile or invalid status.",
-    "Login Failed": "Login Failed",
-    "Invalid credentials or connection error. Please try again.": "Invalid credentials or connection error. Please try again.",
-    "The email or password are incorrect.": "The email or password are incorrect.",
-    "Email required": "Email required",
-    "Please enter your email to reset your password.": "Please enter your email to reset your password.",
-    "Recovery email sent": "Recovery email sent",
-    "Check your inbox to reset your password.": "Check your inbox to reset your password.",
-    "Error": "Error",
-    "Could not send recovery email. Please try again.": "Could not send recovery email. Please try again.",
-    "No user found with that email address.": "No user found with that email address."
+  "Hello! Here is your bill for": "Hello! Here is your bill for",
+  "Thank you for your visit!": "Thank you for your visit!",
+  "Bill for": "Bill for",
+  "Qty": "Qty",
+  "Description": "Description",
+  "Amount": "Amount",
+  "Date": "Date",
+  "Request Bill": "Request Bill",
+  "Choose how to deliver the bill to the customer.": "Choose how to deliver the bill to the customer.",
+  "Send via WhatsApp": "Send via WhatsApp",
+  "Phone Number": "Phone Number",
+  "Enter phone number": "Enter phone number",
+  "Send": "Send",
+  "Print Ticket": "Print Ticket",
+  "Printer Type": "Printer Type",
+  "Select printer type": "Select printer type",
+  "Thermal Printer (80mm)": "Thermal Printer (80mm)",
+  "Conventional (A4)": "Conventional (A4)",
+  "Print Physical Ticket": "Print Physical Ticket",
+  "Register Payment": "Register Payment",
+  "Confirm the payment details to close the order.": "Confirm the payment details to close the order.",
+  "Paid Amount": "Paid Amount",
+  "Tip": "Tip",
+  "Payment Method": "Payment Method",
+  "Select a method": "Select a method",
+  "Cash": "Cash",
+  "Credit Card": "Credit Card",
+  "Debit Card": "Debit Card",
+  "Bank Transfer": "Bank Transfer",
+  "Other": "Other",
+  "Requires Invoice": "Requires Invoice",
+  "Name or Business Name": "Name or Business Name",
+  "RFC": "RFC",
+  "Fiscal Address": "Fiscal Address",
+  "Email": "Email",
+  "Confirm Payment & Close Order": "Confirm Payment & Close Order",
+  "Order Summary": "Order Summary",
+  "items pending": "{{count}} items pending",
+  "All items ready": "All items ready",
+  "Order Complete": "Order Complete",
+  "Table Served": "Table Served",
+  "Ready for pickup": "Ready for pickup",
+  "Diner": "Diner",
+  "Sub-account added": "Sub-account added",
+  "Could not add sub-account.": "Could not add sub-account.",
+  "Cannot Delete": "Cannot Delete",
+  "This sub-account has items and cannot be deleted.": "This sub-account has items and cannot be deleted.",
+  "Sub-account removed": "Sub-account removed",
+  "Could not remove sub-account.": "Could not remove sub-account.",
+  "Subtotal": "Subtotal",
+  "Taxes (16%)": "Taxes (16%)",
+  "Total": "Total",
+  "Split Account": "Split Account",
+  "Send to Kitchen": "Send to Kitchen",
+  "Acknowledge Pickup": "Acknowledge Pickup",
+  "Go to Payment": "Go to Payment",
+  "Cancel Order": "Cancel Order",
+  "Finalize and Close Order": "Finalize and Close Order",
+  "This action will permanently delete the current order. This cannot be undone.": "This action will permanently delete the current order. This cannot be undone.",
+  "Go Back": "Go Back",
+  "Yes, cancel order": "Yes, cancel order",
+  "This will mark the order as paid and update the table status. This action cannot be undone.": "This will mark the order as paid and update the table status. This action cannot be undone.",
+  "Yes, close order": "Yes, close order",
+  "No active order for this item.": "No active order for this item.",
+  "Pending": "Pending",
+  "Preparing": "Preparing",
+  "Ready": "Ready",
+  "Add to Order": "Add to Order",
+  "Add any specific preparation notes for this item.": "Add any specific preparation notes for this item.",
+  "Special Instructions for": "Special Instructions for",
+  "Search items...": "Search items...",
+  "Select a sub-account": "Select a sub-account",
+  "No menu categories found.": "No menu categories found.",
+  "Administrator Dashboard": "Administrator Dashboard",
+  "Manage your restaurant's operations.": "Manage your restaurant's operations.",
+  "Modules": "Modules",
+  "Orders": "Orders",
+  "Menu & Recipes": "Menu & Recipes",
+  "Staff": "Staff",
+  "Inventory": "Inventory",
+  "Kitchen": "Kitchen",
+  "Deliveries": "Deliveries",
+  "Reports": "Reports",
+  "Digital Map": "Digital Map",
+  "Order Management": "Order Management",
+  "Select a table to start an order or manage an existing one.": "Select a table to start an order or manage an existing one.",
+  "Register Takeout Order": "Register Takeout Order",
+  "Loading...": "Loading...",
+  "Takeout": "Takeout",
+  "No active takeout orders.": "No active takeout orders.",
+  "No tables assigned to you in this area.": "No tables assigned to you in this area.",
+  "Select a table to begin.": "Select a table to begin.",
+  "Click on a table on the left to see its details or start a new order.": "Click on a table on the left to see its details or start a new order.",
+  "Table": "Table",
+  "Occupied": "Occupied",
+  "This table is ready for a new order.": "This table is ready for a new order.",
+  "Start New Order": "Start New Order",
+  "Mark as Reserved": "Mark as Reserved",
+  "Mark as Dirty": "Mark as Dirty",
+  "View Order": "View Order",
+  "This table is currently": "This table is currently",
+  "Mark as Available": "Mark as Available",
+  "Status Updated": "Status Updated",
+  "is now": "is now",
+  "Could not update table status.": "Could not update table status.",
+
+  "An active order already exists for this table.": "An active order already exists for this table.",
+  "Order Started": "Order Started",
+  "is now occupied.": "is now occupied.",
+  "Could not start a new order.": "Could not start a new order.",
+  "Takeout Order Created": "Takeout Order Created",
+  "has been created.": "has been created.",
+  "Could not create takeout order.": "Could not create takeout order.",
+  "Order": "Order",
+  "available": "available",
+  "dirty": "dirty",
+  "reserved": "reserved",
+  "open": "open",
+  "preparing": "preparing",
+  "ready_for_pickup": "ready for pickup",
+  "served": "served"
 }
