--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,72 +1,124 @@
 
 {
-    "Administrator Dashboard": "Dashboard de Administrador",
-    "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
-    "Modules": "Módulos",
-    "Orders": "Órdenes",
-    "Menu & Recipes": "Menú y Recetas",
-    "Staff": "Personal",
-    "Inventory": "Inventario",
-    "Kitchen": "Cocina",
-    "Deliveries": "Repartos",
-    "Reports": "Reportes",
-    "Digital Map": "Mapa Digital",
-    "Go Back": "Regresar",
-    "Create": "Crear",
-    "Register Restaurant": "Registrar Restaurante",
-    "Add a new restaurant and its administrator to the system.": "Añade un nuevo restaurante y su administrador al sistema.",
-    "Restaurant Information": "Información del Restaurante",
-    "Restaurant Name": "Nombre del Restaurante",
-    "e.g., Tacos El Sol": "ej., Tacos El Sol",
-    "Social Reason": "Razón Social",
-    "e.g., Tacos El Sol S.A. de C.V.": "ej., Tacos El Sol S.A. de C.V.",
-    "Style": "Estilo",
-    "Select a style": "Selecciona un estilo",
-    "Italiano": "Italiano",
-    "Mar y tierra": "Mar y tierra",
-    "Carnes": "Carnes",
-    "Mariscos": "Mariscos",
-    "Mexicano": "Mexicano",
-    "Japonés": "Japonés",
-    "Otro": "Otro",
-    "Address": "Dirección",
-    "e.g., Main St 123, Downtown": "ej., Av. Principal 123, Centro",
-    "Municipality or City": "Municipio o Ciudad",
-    "e.g., Cuauhtémoc": "ej., Cuauhtémoc",
-    "State": "Estado",
-    "Select a state": "Selecciona un estado",
-    "Contact Information (Administrator)": "Información de Contacto (Administrador)",
-    "Phone (will be the password)": "Teléfono (será la contraseña)",
-    "Minimum 6 digits": "Mínimo 6 dígitos",
-    "Email (will be the username)": "Email (será el usuario)",
-    "e.g., admin@tacoselsol.com": "ej., admin@tacoselsol.com",
-    "RFC": "RFC",
-    "e.g., SOLT850101XXX": "ej., SOLT850101XXX",
-    "Registering...": "Registrando...",
-    "Registration Successful": "Registro Exitoso",
-    "The restaurant '{{name}}' and its administrator user have been registered.": "El restaurante '{{name}}' y su usuario administrador han sido registrados.",
-    "Operation Error": "Error en la Operación",
-    "The email is already in use by another administrator.": "El correo electrónico ya está en uso por otro administrador.",
-    "The password (phone) must be at least 6 characters long.": "La contraseña (teléfono) debe tener al menos 6 caracteres.",
-    "The email format is invalid.": "El formato del correo electrónico es inválido.",
-    "An error occurred during the operation.": "Ocurrió un error durante la operación.",
-    "User (email)": "Usuario (email)",
-    "Password": "Contraseña",
-    "Remember me": "Recordarme",
-    "Forgot your password?": "¿Olvidaste tu contraseña?",
-    "LOG IN": "INICIAR SESIÓN",
-    "Login Successful": "Inicio de Sesión Exitoso",
-    "Welcome back, {{name}}!": "¡Bienvenido de vuelta, {{name}}!",
-    "The user is not active or does not have permissions.": "El usuario no está activo o no tiene permisos.",
-    "Unrecognized user profile or invalid status.": "Perfil de usuario no reconocido o estatus inválido.",
-    "Login Failed": "Falló el Inicio de Sesión",
-    "Invalid credentials or connection error. Please try again.": "Credenciales inválidas o error de conexión. Por favor, inténtalo de nuevo.",
-    "The email or password are incorrect.": "El correo o la contraseña son incorrectos.",
-    "Email required": "Email requerido",
-    "Please enter your email to reset your password.": "Por favor, introduce tu email para restablecer tu contraseña.",
-    "Recovery email sent": "Correo de recuperación enviado",
-    "Check your inbox to reset your password.": "Revisa tu bandeja de entrada para restablecer tu contraseña.",
-    "Error": "Error",
-    "Could not send recovery email. Please try again.": "No se pudo enviar el correo de recuperación. Por favor, inténtalo de nuevo.",
-    "No user found with that email address.": "No se encontró ningún usuario con esa dirección de correo."
+  "Hello! Here is your bill for": "¡Hola! Aquí está tu cuenta para",
+  "Thank you for your visit!": "¡Gracias por tu visita!",
+  "Bill for": "Cuenta para",
+  "Qty": "Cant",
+  "Description": "Descripción",
+  "Amount": "Importe",
+  "Date": "Fecha",
+  "Request Bill": "Pedir Cuenta",
+  "Choose how to deliver the bill to the customer.": "Elige cómo entregar la cuenta al cliente.",
+  "Send via WhatsApp": "Enviar por WhatsApp",
+  "Phone Number": "Número de Teléfono",
+  "Enter phone number": "Ingresa el número de teléfono",
+  "Send": "Enviar",
+  "Print Ticket": "Imprimir Ticket",
+  "Printer Type": "Tipo de Impresora",
+  "Select printer type": "Selecciona el tipo de impresora",
+  "Thermal Printer (80mm)": "Impresora Térmica (80mm)",
+  "Conventional (A4)": "Convencional (A4)",
+  "Print Physical Ticket": "Imprimir Ticket Físico",
+  "Register Payment": "Registrar Pago",
+  "Confirm the payment details to close the order.": "Confirma los detalles del pago para cerrar la orden.",
+  "Paid Amount": "Monto Pagado",
+  "Tip": "Propina",
+  "Payment Method": "Método de Pago",
+  "Select a method": "Selecciona un método",
+  "Cash": "Efectivo",
+  "Credit Card": "Tarjeta de Crédito",
+  "Debit Card": "Tarjeta de Débito",
+  "Bank Transfer": "Transferencia Bancaria",
+  "Other": "Otro",
+  "Requires Invoice": "Requiere Factura",
+  "Name or Business Name": "Nombre o Razón Social",
+  "RFC": "RFC",
+  "Fiscal Address": "Dirección Fiscal",
+  "Email": "Correo Electrónico",
+  "Confirm Payment & Close Order": "Confirmar Pago y Cerrar Orden",
+  "Order Summary": "Resumen de la Orden",
+  "items pending": "{{count}} artículos pendientes",
+  "All items ready": "Todos los artículos listos",
+  "Order Complete": "Orden Completa",
+  "Table Served": "Mesa Servida",
+  "Ready for pickup": "Listo para recoger",
+  "Diner": "Comensal",
+  "Sub-account added": "Subcuenta agregada",
+  "Could not add sub-account.": "No se pudo agregar la subcuenta.",
+  "Cannot Delete": "No se puede eliminar",
+  "This sub-account has items and cannot be deleted.": "Esta subcuenta tiene artículos y no se puede eliminar.",
+  "Sub-account removed": "Subcuenta eliminada",
+  "Could not remove sub-account.": "No se pudo eliminar la subcuenta.",
+  "Subtotal": "Subtotal",
+  "Taxes (16%)": "IVA (16%)",
+  "Total": "Total",
+  "Split Account": "Dividir Cuenta",
+  "Send to Kitchen": "Enviar a Cocina",
+  "Acknowledge Pickup": "Confirmar Recogido",
+  "Go to Payment": "Ir a Pagar",
+  "Cancel Order": "Cancelar Orden",
+  "Finalize and Close Order": "Finalizar y Cerrar Orden",
+  "This action will permanently delete the current order. This cannot be undone.": "Esta acción eliminará permanentemente la orden actual. Esto no se puede deshacer.",
+  "Go Back": "Regresar",
+  "Yes, cancel order": "Sí, cancelar orden",
+  "This will mark the order as paid and update the table status. This action cannot be undone.": "Esto marcará la orden como pagada y actualizará el estado de la mesa. Esta acción no se puede deshacer.",
+  "Yes, close order": "Sí, cerrar orden",
+  "No active order for this item.": "No hay orden activa para este artículo.",
+  "Pending": "Pendiente",
+  "Preparing": "En preparación",
+  "Ready": "Listo",
+  "Add to Order": "Agregar a la Orden",
+  "Add any specific preparation notes for this item.": "Agrega cualquier nota de preparación específica para este platillo.",
+  "Special Instructions for": "Instrucciones Especiales para",
+  "Search items...": "Buscar platillos...",
+  "Select a sub-account": "Selecciona una subcuenta",
+  "No menu categories found.": "No se encontraron categorías de menú.",
+  "Administrator Dashboard": "Dashboard de Administrador",
+  "Manage your restaurant's operations.": "Gestiona las operaciones de tu restaurante.",
+  "Modules": "Módulos",
+  "Orders": "Órdenes",
+  "Menu & Recipes": "Menú y Recetas",
+  "Staff": "Personal",
+  "Inventory": "Inventario",
+  "Kitchen": "Cocina",
+  "Deliveries": "Repartos",
+  "Reports": "Reportes",
+  "Digital Map": "Mapa Digital",
+  "Order Management": "Gestión de Órdenes",
+  "Select a table to start an order or manage an existing one.": "Selecciona una mesa para iniciar una orden o gestionar una existente.",
+  "Register Takeout Order": "Registrar Orden para Llevar",
+  "Loading...": "Cargando...",
+  "Takeout": "Para llevar",
+  "No active takeout orders.": "No hay órdenes para llevar activas.",
+  "No tables assigned to you in this area.": "No tienes mesas asignadas en esta área.",
+  "Select a table to begin.": "Selecciona una mesa para comenzar.",
+  "Click on a table on the left to see its details or start a new order.": "Haz clic en una mesa a la izquierda para ver sus detalles o iniciar una nueva orden.",
+  "Table": "Mesa",
+  "Occupied": "Ocupada",
+  "This table is ready for a new order.": "Esta mesa está lista para una nueva orden.",
+  "Start New Order": "Iniciar Nueva Orden",
+  "Mark as Reserved": "Marcar como Reservada",
+  "Mark as Dirty": "Marcar como Sucia",
+  "View Order": "Ver Orden",
+  "This table is currently": "Esta mesa está actualmente",
+  "Mark as Available": "Marcar como Disponible",
+  "Status Updated": "Estado Actualizado",
+  "is now": "ahora está",
+  "Could not update table status.": "No se pudo actualizar el estado de la mesa.",
+
+  "An active order already exists for this table.": "Ya existe una orden activa para esta mesa.",
+  "Order Started": "Orden Iniciada",
+  "is now occupied.": "ahora está ocupada.",
+  "Could not start a new order.": "No se pudo iniciar una nueva orden.",
+  "Takeout Order Created": "Orden para Llevar Creada",
+  "has been created.": "ha sido creada.",
+  "Could not create takeout order.": "No se pudo crear la orden para llevar.",
+  "Order": "Orden",
+  "available": "disponible",
+  "dirty": "sucia",
+  "reserved": "reservada",
+  "open": "abierta",
+  "preparing": "en preparación",
+  "ready_for_pickup": "lista para recoger",
+  "served": "servida"
 }
